<?xml version="1.0"?>
<package>
  <name>audio_transporter</name>
  <version>0.0.1</version>
  <description>The audio_transporter package</description>
  <maintainer email="zibaeiahmadreza@gmail.com">Ahmadreza Zibaei</maintainer>
  <license>GPL3</license>
  <author email="jane.doe@example.com">Jane Doe</author>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
